--- a/show.html
+++ b/show.html
@@ -28,7 +28,18 @@ color:white;
 }
 h3{ font-family: 'Montserrat', sans-serif;
  font-size:20px;}
+  @media only screen and (max-width: 600px) {
+        h1 {
+            font-size: 20px
+        }
+        h2 {
+            font-size: 15px
+        }
+        .card {
+            width: 90% !important;
+        }
 
+    }
 .img{
 	height:50px;
 }
@@ -130,7 +141,7 @@ i , h1{
    
 </style>
 <body style="font-style:montserrat;">
-<section style="height:40px;">
+<section style="">
 	<div class="card " style="background-color: #2ECAB6; width:50%; margin:0 auto;">
 	<div class="card-body" >
 		
@@ -143,10 +154,7 @@ i , h1{
 	</div>
 </div>
 </section>
-<br>
-<br>
-<br>
-<br>
+<br><br>
 <section>
 	<div class="card shadow-lg p-3 mb-5 bg-white rounded " style="width:50%; margin:0 auto;">
 	<div class="card-body">
